# PadhoPlus

./: .env.example  .gitignore  .replit  DJANGO_ADMIN_GUIDE.md  FRONTEND_DEPENDENCIES.md  README_API_FIX.md  RUN.md  add_sample_data.py  add_sample_notes.py  admin_page_checker.py  check_batches.py  debug_auth_deep.py  debug_test.py  main.py  manage.py  package-lock.json  package.json  pyproject.toml  quick_test.py  replit.md  requirements.txt  run_tests.py  start_server.py  start_servers.bat  test_api_connection.py  test_api_live.py  test_auth_flow.py  test_batch_api.py  test_batch_detail.py  test_correct_batch.py  test_db_connection.py  test_faculty.py  test_faculty_details.py  test_faculty_fix.py  test_faq_overview.py  test_full_stack.py  test_notes_api.py  test_servers.py
attached_assets/: Pasted--About-PadhoPlus-Empowering-Every-Student-Everywhere-PadhoPlus-was-built-with-a-simple-belief--1764145626802_1764145626802.txt  Pasted--Error-Type-Console-Error-Error-Message-A-tree-hydrated-but-some-attributes-of-the-server--1764154537782_1764154537783.txt  Pasted--Goal-of-Doubt-Portal-UI-Help-students-ask-doubts-easily-Help-mentors-respond-quickly-Make--1764179496397_1764179496397.txt  Pasted--workspace-python-manage-py-createsuperuser-Username-vmd-dev-Email-address-dev-gmail-com-Pass-1764275237783_1764275237784.txt  Pasted--workspace-python-manage-py-createsuperuser-Username-vmd-dev-Error-That-username-is-already-ta-1764305244128_1764305244129.txt  Pasted-ProgrammingError-at-admin-login-column-users-qualifications-does-not-exist-LINE-1-ation-u-1764274417163_1764274417163.txt  (+18 more)
(+145 files in other folders)
